WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165084
REGRESSION(
r205396
): ComplexPath is unable to render correctly when some text fallback is involved
https://bugs.webkit.org/show_bug.cgi?id=165084
Summary
REGRESSION(r205396): ComplexPath is unable to render correctly when some text...
Ebrahim Byagowi
Reported
2016-11-27 10:33:26 PST
Created
attachment 295459
[details]
Actual Steps to repro: data:text/html;charset=utf8,<u style="font-family:Helvetica, Arial, sans-serif" dir="RTL">AAA %D8%B4%D8%B3%DB%8C%D8%B4%D8%B3%DB%8C %D8%B4%D8%B3%DB%8C%D8%B4%D8%B3%DB%8C %D8%B4%D8%B3%DB%8C%D8%B4%D8%B3%DB%8C %DA%AF%D8%B2%DB%8C%D9%86%D9%87%D9%94 %D8%B4%D8%B3%DB%8C%D8%B4%D8%B3%DB%8C. Actual: Some part of the text fell under the underline Expected: Same rendering with Firefox and Chrome.
Attachments
Actual
(21.67 KB, image/png)
2016-11-27 10:33 PST
,
Ebrahim Byagowi
no flags
Details
Screenshot on 16B2555
(147.22 KB, image/png)
2016-11-28 14:36 PST
,
Myles C. Maxfield
no flags
Details
Screenshot on 16B2555
(75.87 KB, image/png)
2016-11-28 14:38 PST
,
Myles C. Maxfield
no flags
Details
Raw AppKit
(48.08 KB, image/png)
2016-12-05 17:27 PST
,
Myles C. Maxfield
no flags
Details
WebKit
(7.54 KB, image/png)
2016-12-05 17:30 PST
,
Myles C. Maxfield
no flags
Details
Patch
(5.23 KB, patch)
2016-12-06 00:49 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(5.16 KB, patch)
2016-12-06 00:55 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(10.17 MB, application/zip)
2016-12-06 02:10 PST
,
Build Bot
no flags
Details
Patch
(5.86 KB, patch)
2016-12-06 10:56 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(5.90 KB, patch)
2016-12-06 10:58 PST
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-11-28 14:36:38 PST
Which OS are you using? I've attached a screenshot showing it working correctly on 16B2555.
Myles C. Maxfield
Comment 2
2016-11-28 14:36:58 PST
Created
attachment 295535
[details]
Screenshot on 16B2555
Myles C. Maxfield
Comment 3
2016-11-28 14:38:14 PST
Created
attachment 295536
[details]
Screenshot on 16B2555
Myles C. Maxfield
Comment 4
2016-11-28 14:38:34 PST
Do you have any custom fonts installed?
Ebrahim Byagowi
Comment 5
2016-11-28 19:34:07 PST
This seems like a newly regression and I am seeing it just with Safari Technology Preview 18 and not with the default installed version of Safari. Are you testing with it?
Radar WebKit Bug Importer
Comment 6
2016-12-01 12:38:06 PST
<
rdar://problem/29464658
>
Ebrahim Byagowi
Comment 7
2016-12-04 21:35:33 PST
Another test case which doesn't involve fallback but an immediate start of another tag after a word containing diacritics,
https://fa.wikipedia.org/wiki/User:Ebrahim/t1?printable=yes&withCSS=MediaWiki:Gadget-Vazir.css
third line (after web font load) should be more like Firefox and Chrome.
Myles C. Maxfield
Comment 8
2016-12-05 17:27:06 PST
Created
attachment 296227
[details]
Raw AppKit
Myles C. Maxfield
Comment 9
2016-12-05 17:27:38 PST
(In reply to
comment #8
)
> Created
attachment 296227
[details]
> Raw AppKit
Added a screenshot of the test case using raw AppKit. The problem doesn't occur there, which means this is a WebKit bug. I am able to reproduce this on a recent build.
Myles C. Maxfield
Comment 10
2016-12-05 17:30:15 PST
Created
attachment 296228
[details]
WebKit
Myles C. Maxfield
Comment 11
2016-12-06 00:14:50 PST
The run with the following code points: U+06af U+0632 U+06cc U+0646 U+0647 U+0654 has both an initial advance as well as origins.
Myles C. Maxfield
Comment 12
2016-12-06 00:17:05 PST
This is caused by
r205396
Myles C. Maxfield
Comment 13
2016-12-06 00:48:29 PST
***
Bug 165464
has been marked as a duplicate of this bug. ***
Myles C. Maxfield
Comment 14
2016-12-06 00:49:32 PST
Created
attachment 296282
[details]
Patch
Myles C. Maxfield
Comment 15
2016-12-06 00:55:43 PST
Created
attachment 296283
[details]
Patch
Build Bot
Comment 16
2016-12-06 02:10:00 PST
Comment on
attachment 296283
[details]
Patch
Attachment 296283
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2632700
New failing tests: fast/text/initial-advance-in-intermediate-run-complex.html imported/blink/fast/text/international/vertical-positioning-with-combining-marks.html
Build Bot
Comment 17
2016-12-06 02:10:03 PST
Created
attachment 296285
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 18
2016-12-06 10:56:00 PST
Created
attachment 296300
[details]
Patch
Myles C. Maxfield
Comment 19
2016-12-06 10:58:08 PST
Created
attachment 296301
[details]
Patch
Simon Fraser (smfr)
Comment 20
2016-12-06 11:26:00 PST
Comment on
attachment 296301
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296301&action=review
> Source/WebCore/platform/graphics/mac/ComplexTextController.cpp:674 > + if (!complexTextRun.glyphOrigins() && r && m_adjustedBaseAdvances.size()) {
Can we rename 'r'?
Myles C. Maxfield
Comment 21
2016-12-06 11:55:19 PST
Committed
r209410
: <
http://trac.webkit.org/changeset/209410
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug