[Cocoa] REGRESSION(r205396): Intermediate CTRuns with initial advances get double counted when glyph origins are enabled https://bugs.webkit.org/show_bug.cgi?id=165084

Reviewed by Simon Fraser.

Source/WebCore:

When glyph origins are not enabled, an intermediate CTRun's initial advance is simply added
to the previous glyph's advance. However, when glyph origins are enabled, this shouldn't
occur.

Test: fast/text/initial-advance-in-intermediate-run-complex.html

* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances):

LayoutTests:

* fast/text/initial-advance-in-intermediate-run-complex-expected.html: Added.
* fast/text/initial-advance-in-intermediate-run-complex.html: Added.
* platform/ios-simulator/TestExpectations: Disable the test on iOS because it relies
on Arial being used to draw Arabic, which we explicitly don't allow.

Canonical link: https://commits.webkit.org/183077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209410 268f45cc-cd09-0410-ab3c-d52691b4dbfc